gitops/external-hfs/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-files-cloud-buc-sh
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-gateway
    namespace: external-gateway
  hostnames:
  - "files.cloud.buc.sh"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: hfs
      port: 8080
      weight: 1
    matches:
    - method: GET
      path:
        type: Exact
        value: /
    - method: GET
      path:
        type: RegularExpression
        value: "/(public|guests|private).*"
    - method: GET
      path:
        type: RegularExpression
        value: "/~/(api/get_|api/login|api/logout|frontend).*"

  - matches:
    - path:
        type: PathPrefix
        value: /~/api/
    - path:
        type: PathPrefix
        value: /~/admin/
    - path:
        type: PathPrefix
        value: /~/nas/
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.envoyproxy.io
        kind: HTTPRouteFilter
        name: 403-denied
