gitops/external-hfs/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hfs-plain
  namespace: external-hfs
spec:
  rules:
  - host: "files-admin.10.0.0.21.nip.io"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
  - host: "files.10.0.0.21.nip.io"
    http:
      paths:
      # === API Calls ========================================
      - path: "/~/frontend"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
      - path: "/~/api/get_"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
      - path: "/~/api/login"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
      - path: "/~/api/logout"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
      # === Folder Paths =====================================
      - path: "/"
        pathType: Exact
        backend:
          service:
            name: hfs
            port:
              name: http
      - path: "/uploads"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
      - path: "/public"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
      - path: "/guests"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
      - path: "/private"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
      - path: "/nas"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hfs-tls
  namespace: external-hfs
spec:
  tls:
  - secretName: cert-files-buc-sh
    hosts:
    - files-admin.buc.sh
    - files.buc.sh
  rules:
  - host: "files-admin.buc.sh"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
  - host: "files.buc.sh"
    http:
      paths:
      # === API Calls ========================================
      - path: "/~/frontend"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
      - path: "/~/api/get_"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
      - path: "/~/api/login"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
      - path: "/~/api/logout"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
      # === Folder Paths =====================================
      - path: "/"
        pathType: Exact
        backend:
          service:
            name: hfs
            port:
              name: http
      - path: "/uploads"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
      - path: "/public"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
      - path: "/guests"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
      - path: "/private"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
      - path: "/nas"
        pathType: Prefix
        backend:
          service:
            name: hfs
            port:
              name: http
