gitops/external-hfs/deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-hfs
  labels:
    pod-security.kubernetes.io/enforce: restricted

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hfs
  namespace: external-hfs
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/app: hfs
  template:
    metadata:
      labels:
        app.kubernetes.io/app: hfs
    spec:
      containers:
      - name: hfs
        image: docker.io/rejetto/hfs:v3.3.4
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /data
        - name: config-template
          mountPath: /template
        - name: data
          mountPath: /app/myDisk/nas
        - name: uploads
          mountPath: /app/myDisk/uploads
        resources:
          requests:
            cpu: 10m
            memory: 60M
        livenessProbe:
          httpGet:
            path: /~/frontend/fontello.css
            port: http
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
      securityContext:
        runAsNonRoot: true
        runAsUser: 100
        runAsGroup: 101
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: hfs-config
      - name: config-template
        configMap:
          name: hfs-config
      - name: uploads
        persistentVolumeClaim:
          claimName: hfs-uploads
      - name: data
        persistentVolumeClaim:
          claimName: nas-data

---
apiVersion: v1
kind: Service
metadata:
  name: hfs
  namespace: external-hfs
spec:
  selector:
    app.kubernetes.io/app: hfs
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-hfs-egress
  namespace: external-hfs
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/app: hfs
  policyTypes:
    - Egress
    - Ingress
  egress:
  # Allow DNS Resolution
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - ipBlock:
        cidr: "10.0.0.19/32"
  ingress:
  # Allow Ingress
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: external-gateway
    ports:
    - protocol: TCP
      port: 8080
